# rust-competitive-programming

./: Cargo.toml  Justfile  README.md  doc.md  new_problem.sh  run.sh  template.rs  test.sh
problems/1-basic-statistics/: problem.md
problems/2-prime-judge/: problem.md
problems/4-sum-of-digits/: problem.md
problems/intro-3/: problem.md
problems/template/: problem.md  solution.rs
src/: lib.rs
